--- a/pages/index.css
+++ b/pages/index.css
@@ -1,1 +1,6 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+/*-----------------blocks-----------------*/
+@import url(../blocks/header.css);
+@import url(../blocks/achievements.css);
+@import url(../blocks/footer.css);
