--- a/blocks/achievements.css
+++ b/blocks/achievements.css
@@ -12,3 +12,15 @@
     display: flex;
     box-shadow: #2a3249 0px 0px 20px;
 }
+.achievements__left-column{
+    display: flex;
+    border: 1px solid #1e1e1e;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+}
+.achievements__trophy-image{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
